[package]
name = "extended-vft"
version = "1.1.0"
license = "MIT"
edition = "2021"

[dependencies]
extended-vft-app = { path = "app" }

[build-dependencies]
extended-vft-app = { path = "app" }
sails-rs = { version = "=0.8", features = ["wasm-builder"] }
sails-idl-gen = "=0.8"
sails-client-gen = "=0.8"

[dev-dependencies]
extended-vft = { path = ".", features = ["wasm-binary"] }
extended-vft-client = { path = "client" }
sails-rs = { version = "=0.8", features = ["gtest"] }
tokio = { version = "1.41", features = ["rt", "macros"] }
gclient = "=1.8"
gear-core = "=1.8"

[features]
wasm-binary = []
